moved tests & added CI workflow

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,3 +31,5 @@ function(add_sub_tests SUB_NAME)
 endfunction(add_sub_tests)
 
 add_tests("" all)
+add_sub_tests(collections)
+add_sub_tests(exceptions)
