--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build
+      - name: Install and Build Google Test Framework
         run: |
           sudo apt-get install libgtest-dev
-          cd /usr/src/googletest/googletest || exit
-          sudo mkdir build
-          cd build || exit
+          cd /usr/src/googletest/googletest
+          sudo mkdir gtest-build
+          cd gtest-build
           sudo cmake ..
           sudo make
           sudo cp libgtest* /usr/lib/
           cd ..
-          sudo rm -rf build
           sudo mkdir /usr/local/lib/googletest
           sudo ln -s /usr/lib/libgtest.a /usr/local/lib/googletest/libgtest.a
           sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/googletest/libgtest_main.a
-          sudo mkdir build
-          cd build
+      - name: Build Library
+        run: |
+          sudo mkdir lib-build
+          cd lib-build
           sudo cmake ..
           sudo make
           ./tests/unittests-all
