--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
 #            os: windows-latest,
 #            build_type: "Release", cc: "gcc", cxx: "g++"
 #          }
-          - name: "Ubuntu Latest"
-            os: ubuntu-latest
+          - name: "Ubuntu Latest",
+            os: ubuntu-latest,
             build_type: "Release", cc: "gcc", cxx: "g++"
           - name: "Ubuntu 18.04",
             os: ubuntu-18.04,
