--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,20 +4,15 @@ on: [push]
 
 jobs:
   build:
-    name: ${{ matrix.config.name }}
+    name: ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        config:
-          - name: "Ubuntu Latest",
-            os: ubuntu-latest,
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          - name: "Ubuntu 18.04",
-            os: ubuntu-18.04,
-            build_type: "Release", cc: "gcc", cxx: "g++"
-          - name: "Ubuntu 16.04",
-            os: ubuntu-16.04,
-            build_type: "Release", cc: "gcc", cxx: "g++"
+        name: [Ubuntu 16.04, Ubuntu 18.04, Ubuntu Latest]
+        os: [ubuntu-16.04, ubuntu-18.04, ubuntu-latest]
+        cc: gcc
+        cxx: g++
+        build_type: Release
     steps:
       - uses: actions/checkout@v2
       - name: Install and Build Google Test Framework
