--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         name: [Ubuntu 16.04, Ubuntu 18.04, Ubuntu Latest]
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-latest]
         compiler: [gcc, g++]
-        build_type: Release
+        build_type: release
     steps:
       - uses: actions/checkout@v2
       - name: Install and Build Google Test Framework
