--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install and Build Google Test Framework
         env:
-          CC: gcc
           CXX: g++
         run: |
           sudo apt-get install libgtest-dev
@@ -34,7 +33,8 @@ jobs:
           sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/googletest/libgtest_main.a
       - name: Build Library
         env:
-          CC: ${{ matrix.compiler }}
+          CC: gcc
+          CXX: g++
         run: |
           sudo mkdir lib-build
           cd lib-build
