--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        name: Ubuntu
+        name: [Ubuntu]
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
