--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,19 +19,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install and Build Google Test Framework
         env:
+          CC: gcc
           CXX: g++
         run: |
-          sudo apt-get install libgtest-dev
-          cd /usr/src/googletest/googletest
-          sudo mkdir gtest-build
-          cd gtest-build
-          sudo cmake ..
-          sudo make
-          sudo cp libgtest* /usr/lib/
-          cd ..
-          sudo mkdir /usr/local/lib/googletest
-          sudo ln -s /usr/lib/libgtest.a /usr/local/lib/googletest/libgtest.a
-          sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/googletest/libgtest_main.a
+          sudo bash scripts/install_gtest.sh
       - name: Build Library
         env:
           CC: gcc
