--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,14 @@ env:
 
 jobs:
   build:
-    name: ${{ matrix.name }} - ${{ matrix.os }}
+    name: ${{ matrix.name }} - ${{ matrix.os }} - ${{ matrix.compiler }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         name: [Ubuntu]
         os: [ubuntu-18.04, ubuntu-latest]
-        compiler: [g++, gcc]
+        compiler: [g++]
     steps:
       - uses: actions/checkout@v2
       - name: Install and Build Google Test Framework
