--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           sudo mkdir lib-build
           cd lib-build
-          sudo cmake ..
+          sudo cmake -DCMAKE_BUILD_TYPE=Release ..
           sudo make
           sudo ./tests/unittests-all
