--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,14 @@
-name: Continuous Integration
+name: "Continuous Integration [Compiler: g++]"
 
 on: [push]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  build_type: Release
+  BUILD_TYPE: Debug
 
 jobs:
   build:
-    name: "System: ${{ matrix.os }}, Compilers: [gcc-${{ matrix.compiler_version }}, g++-${{ matrix.compiler_version }}]"
+    name: "System: ${{ matrix.os }} [g++-${{ matrix.compiler_version }}]"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -19,36 +19,29 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install g++ and Check Version
-        env:
-          CC: gcc${{ matrix.compiler_version }}
-          CXX: g++${{ matrix.compiler_version }}
+      - name: Install Compiler and Check Version
         run: |
           sudo apt update -y && \
           sudo apt install -y ${{ matrix.compiler }} && \
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10 && \
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10 && \
-          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 && \
-          sudo update-alternatives --set cc /usr/bin/gcc && \
           sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 && \
           sudo update-alternatives --set c++ /usr/bin/g++ && \
           g++ --version
 
       - name: Install and Build Google Test Framework
         env:
-          CC: gcc${{ matrix.compiler_version }}
-          CXX: g++${{ matrix.compiler_version }}
+          CXX: g++-${{ matrix.compiler_version }}
         run: |
           sudo bash scripts/install_gtest.sh
 
       - name: Build the Library
         env:
-          CC: gcc${{ matrix.compiler_version }}
           CXX: g++${{ matrix.compiler_version }}
         run: |
           sudo mkdir build-debug && \
           cd build-debug/ && \
-          sudo cmake -DCMAKE_BUILD_TYPE=Debug .. && \
+          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
+                     -DCMAKE_BUILD_TYPE=$BUILD_TYPE .. && \
           sudo make
 
       - name: Run Tests
