--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         name: [Ubuntu]
-        os: [ubuntu-16.04, ubuntu-18.04]
+        os: [ubuntu-18.04]
         compiler_version: [7, 8, 9]
     steps:
       - uses: actions/checkout@v2
