--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "Continuous Integration [Compiler: g++]"
+name: "Continuous Integration"
 
 on: [push]
 
@@ -8,43 +8,52 @@ env:
 
 jobs:
   build:
-    name: "System: ${{ matrix.os }} [g++-${{ matrix.compiler_version }}]"
+    name: "System: ${{ matrix.os }} [gcc-${{ matrix.compiler_version }}, g++-${{ matrix.compiler_version }}]"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         name: [Ubuntu]
         os: [ubuntu-18.04]
-        compiler_version: [7, 8, 9]
+        compiler_version: [7, 8, 9, 10]
     steps:
       - uses: actions/checkout@v2
 
       - name: Install Compiler and Check Version
         run: |
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
           sudo apt update -y && \
-          sudo apt install -y g++-${{ matrix.compiler_version }} && \
+          sudo apt install -y gcc-${{ matrix.compiler_version }} g++-${{ matrix.compiler_version }} && \
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10 && \
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10 && \
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/gcc 30 && \
+          sudo update-alternatives --set cc /usr/bin/gcc && \
           sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++ 30 && \
           sudo update-alternatives --set c++ /usr/bin/g++ && \
+          gcc --version && \
           g++ --version
 
       - name: Install and Build Google Test Framework
         env:
           CXX: g++-${{ matrix.compiler_version }}
+          CC: gcc-${{ matrix.compiler_version }}
         run: |
           sudo bash scripts/install_gtest.sh
 
       - name: Build the Library
         env:
           CXX: g++${{ matrix.compiler_version }}
+          CC: gcc-${{ matrix.compiler_version }}
         run: |
           sudo mkdir build-debug && \
           cd build-debug/ && \
-          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
+          sudo cmake -DCMAKE_TEST_ALL=yes \
+                     -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
+                     -DCMAKE_CC_COMPILER=gcc-${{ matrix.compiler_version }} \
                      -DCMAKE_BUILD_TYPE=$BUILD_TYPE .. && \
           sudo make
 
       - name: Run Tests
         run: |
           cd build-debug/ && \
-          sudo ./tests/unittests-all
+          sudo valgrind --leak-check=full ./tests/unittests-all
