--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,9 @@ function(add_sub_tests SUB_NAME)
 endfunction(add_sub_tests)
 
 add_tests("" all)
-add_sub_tests(collections)
-add_sub_tests(exceptions)
-add_sub_tests(object)
-add_sub_tests(types)
+if (NOT ${CMAKE_TEST_ALL} STREQUAL "yes")
+    add_sub_tests(collections)
+    add_sub_tests(exceptions)
+    add_sub_tests(object)
+    add_sub_tests(types)
+endif()
