--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,15 @@ jobs:
           CXX: g++-${{ matrix.compiler_version }}
           CC: gcc-${{ matrix.compiler_version }}
         run: |
-          sudo bash scripts/install_gtest.sh
+          git clone -q https://github.com/google/googletest.git /googletest && \
+          sudo mkdir -p /googletest/build && \
+          cd /googletest/build && \
+          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
+                     -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} .. && \
+          make && \
+          make install
 
-      - name: Build the Library
+      - name: Build Tests
         env:
           CXX: g++${{ matrix.compiler_version }}
           CC: gcc-${{ matrix.compiler_version }}
