--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,14 @@ jobs:
           gcc --version && \
           g++ --version
 
-      - name: Install and Build Google Test Framework
+      - name: Build and Install Google Test Framework
         env:
           CXX: g++-${{ matrix.compiler_version }}
           CC: gcc-${{ matrix.compiler_version }}
         run: |
-          git clone -q https://github.com/google/googletest.git /googletest && \
-          sudo mkdir -p /googletest/build && \
-          cd /googletest/build && \
+          git clone -q https://github.com/google/googletest.git ./googletest && \
+          sudo mkdir -p ./googletest/build && \
+          cd ./googletest/build && \
           sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
                      -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} .. && \
           make && \
