--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && \
           sudo apt update -y && \
+          sudo pip install --upgrade cmake && \
           sudo apt install -y gcc-${{ matrix.compiler_version }} g++-${{ matrix.compiler_version }} valgrind && \
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${{ matrix.compiler_version }} 10 && \
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-${{ matrix.compiler_version }} 10 && \
@@ -38,13 +39,13 @@ jobs:
           CXX: g++-${{ matrix.compiler_version }}
           CC: gcc-${{ matrix.compiler_version }}
         run: |
-          git clone -q https://github.com/google/googletest.git ./googletest && \
+          git clone -q https://github.com/google/googletest.git && \
           sudo mkdir -p ./googletest/build && \
           cd ./googletest/build && \
           sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
                      -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} .. && \
-          make && \
-          make install
+          sudo make && \
+          sudo make install
 
       - name: Build Tests
         env:
