--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,10 @@
 set(LIB_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
 file(GLOB_RECURSE LIB_SOURCES LIST_DIRECTORIES true ${LIB_DIRECTORY}/*.h ${LIB_DIRECTORY}/*.cpp)
-remove_dirs(SOURCES)
+foreach(entry ${SOURCES})
+    if (IS_DIRECTORY ${entry})
+        list(REMOVE_ITEM SOURCES ${entry})
+    endif()
+endforeach()
 
 set(CMAKE_CXX_FLAGS "-pthread")
 
@@ -9,7 +13,11 @@ set(BINARY unittests)
 function(add_tests SUB_DIR SUB_NAME)
     set(TESTS_DIR ${PROJECT_SOURCE_DIR}/tests/${SUB_DIR})
     file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true ${TESTS_DIR}*.cpp)
-    remove_dirs(SOURCES)
+    foreach(entry ${SOURCES})
+        if (IS_DIRECTORY ${entry})
+            list(REMOVE_ITEM SOURCES ${entry})
+        endif()
+    endforeach()
     list(FILTER SOURCES EXCLUDE REGEX ".*main.cpp$")
     set(FULL_BIN ${BINARY}-${SUB_NAME})
     add_executable(${FULL_BIN} ${LIB_SOURCES} ${SOURCES} ${TESTS_DIR}/main.cpp)
@@ -21,7 +29,10 @@ function(add_sub_tests SUB_NAME)
 endfunction(add_sub_tests)
 
 add_tests("" all)
-if (NOT ${CMAKE_TEST_ALL} STREQUAL "yes")
+if (NOT DEFINED CMAKE_TEST_ALL_ONLY)
+    set(CMAKE_TEST_ALL_ONLY no)
+endif()
+if (${CMAKE_TEST_ALL_ONLY} STREQUAL "no")
     add_sub_tests(collections)
     add_sub_tests(exceptions)
     add_sub_tests(object)
