--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,6 @@ name: "Continuous Integration"
 
 on: [push]
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
-
 jobs:
   build:
     name: "${{ matrix.os }} [gcc-${{ matrix.compiler_version }}, g++-${{ matrix.compiler_version }}]"
@@ -15,7 +11,9 @@ jobs:
       matrix:
         name: [Ubuntu]
         os: [ubuntu-18.04]
-        compiler_version: [7, 8, 9, 10]
+        compiler_version: [10]
+    env:
+      BUILD_TYPE: 'Debug'
     steps:
       - uses: actions/checkout@v2
 
@@ -35,9 +33,6 @@ jobs:
           g++ --version
 
       - name: Build and Install Google Test Framework
-        env:
-          CXX: g++-${{ matrix.compiler_version }}
-          CC: gcc-${{ matrix.compiler_version }}
         run: |
           git clone -q https://github.com/google/googletest.git && \
           sudo mkdir -p ./googletest/build && \
@@ -48,9 +43,6 @@ jobs:
           sudo make install
 
       - name: Build Tests
-        env:
-          CXX: g++${{ matrix.compiler_version }}
-          CC: gcc-${{ matrix.compiler_version }}
         run: |
           sudo mkdir build && \
           cd build/ && \
