--- a/.github/workflows/tests-clang.yml
+++ b/.github/workflows/tests-clang.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: "${{ matrix.os }} [clang++-${{ matrix.compiler_version }}]"
+    name: "${{ matrix.os }} [clang-${{ matrix.compiler_version }}]"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
