--- a/.github/workflows/tests-gcc.yml
+++ b/.github/workflows/tests-gcc.yml
@@ -1,4 +1,4 @@
-name: "gcc/g++"
+name: "gcc"
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: "${{ matrix.os }} [gcc-${{ matrix.compiler_version }}, g++-${{ matrix.compiler_version }}]"
+    name: "${{ matrix.os }} [gcc-${{ matrix.compiler_version }}]"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
