--- a/.github/workflows/tests-gcc-ubuntu.yml
+++ b/.github/workflows/tests-gcc-ubuntu.yml
@@ -11,8 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        name: [Ubuntu]
-        os: [ubuntu-18.04]
+        os: [ubuntu-18.04, ubuntu-20.04]
         compiler_version: [10]
     env:
       BUILD_TYPE: 'Debug'
