--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,5 +36,6 @@ if (${CMAKE_TEST_ALL_ONLY} STREQUAL "no")
     add_sub_tests(collections)
     add_sub_tests(exceptions)
     add_sub_tests(object)
+    add_sub_tests(re)
     add_sub_tests(types)
 endif()
