added tests for 'object' and 'net' sub-modules

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ endif()
 if (${CMAKE_TEST_ALL_ONLY} STREQUAL "no")
     add_sub_tests(collections)
     add_sub_tests(exceptions)
+    add_sub_tests(net)
     add_sub_tests(object)
     add_sub_tests(re)
     add_sub_tests(types)
