--- a/.github/workflows/tests-clang-ubuntu.yml
+++ b/.github/workflows/tests-clang-ubuntu.yml
@@ -1,4 +1,4 @@
-name: "clang"
+name: "ubuntu-clang"
 on:
   push:
     branches:
@@ -13,8 +13,6 @@ jobs:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
         compiler_version: [10]
-    env:
-      BUILD_TYPE: 'Debug'
     steps:
       - uses: actions/checkout@v2
       - name: Install Compiler
@@ -38,8 +36,8 @@ jobs:
           sudo cmake -DCMAKE_TEST_ALL=yes \
                      -DCMAKE_CXX_COMPILER=clang++-${{ matrix.compiler_version }} \
                      -DCMAKE_C_COMPILER=clang-${{ matrix.compiler_version }} \
-                     -DCMAKE_BUILD_TYPE=$BUILD_TYPE .. && \
-          sudo make
+                     -DCMAKE_BUILD_TYPE=Debug .. && \
+          sudo make unittests-all
       - name: Run Tests
         run: |
           sudo valgrind --leak-check=full ./build/tests/unittests-all
