--- a/.github/workflows/tests-gcc-ubuntu.yml
+++ b/.github/workflows/tests-gcc-ubuntu.yml
@@ -42,8 +42,7 @@ jobs:
         run: |
           sudo mkdir build && \
           cd build/ && \
-          sudo cmake -DCMAKE_TEST_ALL=yes \
-                     -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
+          sudo cmake -DCMAKE_CXX_COMPILER=g++-${{ matrix.compiler_version }} \
                      -DCMAKE_C_COMPILER=gcc-${{ matrix.compiler_version }} \
                      -DCMAKE_BUILD_TYPE=Debug .. && \
           sudo make unittests-all
