--- a/.github/workflows/tests-clang-alpine.yml
+++ b/.github/workflows/tests-clang-alpine.yml
@@ -2,8 +2,10 @@ name: "alpine-clang"
 on:
   push:
     branches:
-      - '**'
-      - '!master'
+      - 'alpine/*'
+      - 'alpine-*'
+      - 'testing'
+      - 'dev'
 jobs:
   build:
     name: "alpine-${{ matrix.alpine_version }} [clang-10]"
