--- a/.github/workflows/tests-clang-alpine.yml
+++ b/.github/workflows/tests-clang-alpine.yml
@@ -2,10 +2,8 @@ name: "alpine-clang"
 on:
   push:
     branches:
-      - 'alpine/*'
-      - 'alpine-*'
-      - 'testing'
-      - 'dev'
+      - '**'
+      - '!master'
 jobs:
   build:
     name: "alpine-${{ matrix.alpine_version }} [clang-10]"
