--- a/.github/workflows/tests-gcc-alpine.yml
+++ b/.github/workflows/tests-gcc-alpine.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - 'dev'
       - '!master'
+  pull_request:
+    branches:
+      - '**'
 jobs:
   build:
     name: "alpine-${{ matrix.alpine_version }} [gcc-10]"
