--- a/.github/workflows/tests-gcc-ubuntu.yml
+++ b/.github/workflows/tests-gcc-ubuntu.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - 'dev'
       - '!master'
+  pull_request:
+    branches:
+      - '**'
 jobs:
   build:
     name: "${{ matrix.os }} [gcc-${{ matrix.compiler_version }}]"
