--- a/.github/workflows/tests-gcc-ubuntu.yml
+++ b/.github/workflows/tests-gcc-ubuntu.yml
@@ -1,9 +1,9 @@
-name: "ubuntu-gcc"
+name: "test ubuntu g++"
 on:
   push:
     branches:
       - 'dev'
-      - '!master'
+      - 'master'
   pull_request:
     branches:
       - '**'
