--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,10 +1,9 @@
 [bumpversion]
 current_version = 0.0.0
-commit = False
+commit = True
 tag = False
-parse = (major\s*=\s*(?P<major>\d+)\s*;\n\s*const\s*uint\s*minor\s*=\s*(?P<minor>\d+);\n\s*const\s*uint\s*patch\s*=\s*(?P<patch>\d+))|((?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+))
-serialize = major = {major};\nconst uint minor = {minor};\nconst uint patch = {patch}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
+serialize = {major}.{minor}.{patch}
 message = Update version: {current_version} -> {new_version}
 
 [bumpversion:file:VERSION]
-[bumpversion:file:src/_def_.h]
