added gtest linking for windows

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,7 +21,11 @@ function(add_tests SUB_DIR SUB_NAME)
     list(FILTER SOURCES EXCLUDE REGEX ".*main.cpp$")
     set(FULL_BIN ${BINARY}-${SUB_NAME})
     add_executable(${FULL_BIN} ${LIB_SOURCES} ${SOURCES} ${TESTS_DIR}/main.cpp)
-    target_link_libraries(${FULL_BIN} PUBLIC gtest stdc++fs)
+    if (WIN32)
+        target_link_libraries(${FULL_BIN} PUBLIC gtestd gtest_maind stdc++fs)
+    else()
+        target_link_libraries(${FULL_BIN} PUBLIC gtest stdc++fs)
+    endif()
 endfunction()
 
 function(add_sub_tests SUB_NAME)
