changed shared lib to static one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ message(STATUS "[INFO] Sources found: ${SOURCES_COUNT}")
 
 # Build shared library.
 set(FULL_LIBRARY_NAME ${LIBRARY_NAME}-${LIBRARY_VERSION})
-add_library(${FULL_LIBRARY_NAME} SHARED ${SOURCES})
+add_library(${FULL_LIBRARY_NAME} STATIC ${SOURCES})
 
 # Install library.
 install(
