--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,3 @@
-set(LIB_DIRECTORY ${PROJECT_SOURCE_DIR}/src)
-file(GLOB_RECURSE LIB_SOURCES LIST_DIRECTORIES true ${LIB_DIRECTORY}/*.h ${LIB_DIRECTORY}/*.cpp)
-foreach(entry ${SOURCES})
-    if (IS_DIRECTORY ${entry})
-        list(REMOVE_ITEM SOURCES ${entry})
-    endif()
-endforeach()
-
 set(CMAKE_CXX_FLAGS "-pthread")
 
 set(BINARY unittests)
@@ -20,12 +12,11 @@ function(add_tests SUB_DIR SUB_NAME)
     endforeach()
     list(FILTER SOURCES EXCLUDE REGEX ".*main.cpp$")
     set(FULL_BIN ${BINARY}-${SUB_NAME})
-    add_executable(${FULL_BIN} ${LIB_SOURCES} ${SOURCES} ${TESTS_DIR}/main.cpp)
+    add_executable(${FULL_BIN} ${SOURCES} ${TESTS_DIR}/main.cpp)
     if (WIN32)
-        target_link_libraries(${FULL_BIN} PUBLIC gtestd gtest_maind stdc++fs)
-    else()
-        target_link_libraries(${FULL_BIN} PUBLIC gtest stdc++fs)
+        target_link_libraries(${FULL_BIN} PUBLIC gtest_main)
     endif()
+    target_link_libraries(${FULL_BIN} PUBLIC gtest stdc++fs ${FULL_LIBRARY_NAME})
 endfunction()
 
 function(add_sub_tests SUB_NAME)
