removed version from lib file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,21 +28,19 @@ list(LENGTH SOURCES SOURCES_COUNT)
 message(STATUS "[INFO] Sources found: ${SOURCES_COUNT}")
 
 # Build shared library.
-set(FULL_LIBRARY_NAME ${LIBRARY_NAME}-${LIBRARY_VERSION})
-
 if (NOT LIB_SHARED)
     set(LIB_SHARED no)
 endif()
 
 if (${LIB_SHARED})
-    add_library(${FULL_LIBRARY_NAME} SHARED ${SOURCES})
+    add_library(${LIBRARY_NAME} SHARED ${SOURCES})
 else()
-    add_library(${FULL_LIBRARY_NAME} STATIC ${SOURCES})
+    add_library(${LIBRARY_NAME} STATIC ${SOURCES})
 endif()
 
 # Install library.
 install(
-    TARGETS ${FULL_LIBRARY_NAME}
+    TARGETS ${LIBRARY_NAME}
     ARCHIVE DESTINATION ${GNU_LIB_DIR}
     LIBRARY DESTINATION ${GNU_LIB_DIR}
 )
